--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
     "morgan": "^1.10.0",
+    "dotenv": "^16.0.2",
     "start": "^5.1.0"
   },
   "devDependencies": {
